# guefi

./: Cargo.toml  deny.toml
.github/workflows/: rust.yml
guefi/: Cargo.toml
guefi-lib/: Cargo.toml  deny.toml
guefi-lib/src/: lib.rs
guefi-lib/src/system/: impl.rs  local.rs  mod.rs
guefi-lib/src/worker/: mod.rs
guefi-worker/: Cargo.toml
guefi-worker/src/: lib.rs  main.rs  remote.rs
guefi-worker/src/worker/: message.rs  mod.rs
guefi/src/: main.rs  remote.rs  status.rs  window.rs
guefi/src/pages/: boot.rs  mod.rs
