[package]
name = "guefi-worker"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.36.0"
ipc-rpc = "1.2.6"
guefi-lib = { path = "../guefi-lib" }
async-once-cell = "0.5.3"
schemars = "0.8.16"
serde = "1.0.197"