[package]
name = "guefi"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.36.0"
iced = { version = "0.12.0", features = [ "tokio" ] }
guefi-lib = { path = "../guefi-lib" }
guefi-worker = { path = "../guefi-worker" }
